# ZwDetectMemoryRead

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
NullifyZwDetectMemoryRead/: dllmain.cpp  dllmain.h
ZwDetectMemoryRead/: main.cpp
